faveo-manifests/redis.yaml
apiVersion: v1
kind: Service
metadata:
  name: faveo-redis
  namespace: faveo-thetamilselvan
spec:
  selector:
    app: faveo-redis
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: faveo-redis
  namespace: faveo-thetamilselvan
spec:
  replicas: 1
  selector:
    matchLabels:
      app: faveo-redis
  template:
    metadata:
      labels:
        app: faveo-redis
    spec:
      containers:
      - name: faveo-redis
        image: redis:latest
        ports:
        - containerPort: 6379
